# Diameter_Fitting

./: CMakeLists.txt  README.md  extrinsics.yml  intrinsics.yml  out_camera_data_left.yml  out_camera_data_right.yml  thinking
image/: leftImage.txt  rightImage.txt
include/: FastLightExtraction.h
src/: FastLightExtraction.cpp
